had to fix alignment of TAP TO CLOSE, nav, and changed box shadow color

--- a/css/style.scss
+++ b/css/style.scss
@@ -77,7 +77,7 @@ photo img { width: 90%; position: absolute; margin: -5% 0 0 0; z-index: 8000; bo
 
 .subdata-link { margin-top: 40px; font-family: 'Orbitron', sans-serif; }
 
-button { background: linear-gradient(#448AFF, $meinnovation-blue); border-radius: 10px; padding: 10px 0; cursor: pointer; color: white; text-align: center; width: 50%; border: none; box-shadow: 4px 4px 8px #3E4551; }
+button { background: linear-gradient(#448AFF, $meinnovation-blue); border-radius: 10px; padding: 10px 0; cursor: pointer; color: white; text-align: center; width: 50%; border: none; box-shadow: 4px 4px 8px #ccc; }
 
 .ui-button { color: #e0e0e0; }
 
@@ -147,7 +147,7 @@ footer { font-family: 'Arial', sans-serif; position: fixed; color: #9e9e9e; bott
   .contentBack { padding: 50px 20px 20px; color: #ddd; position: absolute; left: 0; right: 0; bottom: 50px; top: 9.6%; z-index: 750; }
 
   /* Navigation Buttons */
-  nav { width: 365px; margin-top: 37px; margin-left: 6px; }
+  nav { width: 365px; margin-top: 30px; margin-left: 6px; }
 
   .collapse_nav { margin-left: 20px; width: 86%; }
 
@@ -180,13 +180,7 @@ footer { font-family: 'Arial', sans-serif; position: fixed; color: #9e9e9e; bott
 
   .subdata-link { margin-top: 40px; font-family: 'Orbitron', sans-serif; }
 
-  button { background: linear-gradient(#448AFF, $meinnovation-blue); border-radius: 10px; padding: 10px 0; cursor: pointer; color: white; font-size: 18px; text-align: center; width: 90%; border: none; box-shadow: 4px 4px 8px #3E4551; }
-
-  #arrowLeft:hover, #arrowRight:hover, ui-button-active { color: $meinnovation-blue; cursor: pointer; text-decoration: none; }
-
-  .ui-button { color: #e0e0e0; }
-
-  button:hover { background: linear-gradient(#fafafa, #9e9e9e); color: $meinnovation-blue; }
+  button { padding: 10px 0; font-size: 18px; text-align: center; width: 90%; }
 
   .meta_instructions, .instructions { display: inline-block; }
 
@@ -205,7 +199,7 @@ footer { font-family: 'Arial', sans-serif; position: fixed; color: #9e9e9e; bott
 
   .stats_col { width: 100%; margin: 0px; }
 
-  .stats_heading { margin:0; background: linear-gradient(#448AFF, $meinnovation-blue); border-radius: 10px; padding: 0; cursor: pointer; color: white; font-size: 18px; text-align: center; width: 100%; border: none; box-shadow: 4px 4px 8px #3E4551; }
+  .stats_heading { margin:0; background: linear-gradient(#448AFF, $meinnovation-blue); border-radius: 10px; padding: 0; cursor: pointer; color: white; font-size: 18px; text-align: center; width: 100%; border: none; box-shadow: 4px 4px 8px #ccc; }
 
   .stats_heading:hover { background: linear-gradient(#fafafa, #9e9e9e); color: $meinnovation-blue; }
 
@@ -296,7 +290,7 @@ footer { font-family: 'Arial', sans-serif; position: fixed; color: #9e9e9e; bott
 
   .subdata-link { margin-top: 40px; font-family: 'Orbitron', sans-serif; }
 
-  button { background: linear-gradient(#448AFF, $meinnovation-blue); border-radius: 10px; padding: 10px 0; cursor: pointer; color: white; font-size: 18px; text-align: center; width: 90%; border: none; box-shadow: 4px 4px 8px #3E4551; }
+  button { background: linear-gradient(#448AFF, $meinnovation-blue); border-radius: 10px; padding: 10px 0; cursor: pointer; color: white; font-size: 18px; text-align: center; width: 90%; border: none; box-shadow: 4px 4px 8px #ccc; }
 
   #arrowLeft:hover, #arrowRight:hover, ui-button-active { color: $meinnovation-blue; cursor: pointer; text-decoration: none; }
 
@@ -319,7 +313,7 @@ footer { font-family: 'Arial', sans-serif; position: fixed; color: #9e9e9e; bott
 
   .stats_col { width: 100%; margin: 0px; }
 
-  .stats_heading { margin:0; background: linear-gradient(#448AFF, $meinnovation-blue); border-radius: 10px; padding: 0; cursor: pointer; color: white; font-size: 18px; text-align: center; width: 100%; border: none; box-shadow: 4px 4px 8px #3E4551; }
+  .stats_heading { margin:0; background: linear-gradient(#448AFF, $meinnovation-blue); border-radius: 10px; padding: 0; cursor: pointer; color: white; font-size: 18px; text-align: center; width: 100%; border: none; box-shadow: 4px 4px 8px #ccc; }
 
   .stats_heading:hover { background: linear-gradient(#fafafa, #9e9e9e); color: $meinnovation-blue; }
 
@@ -402,7 +396,7 @@ footer { font-family: 'Arial', sans-serif; position: fixed; color: #9e9e9e; bott
 
   .subdata-link { margin-top: 40px; font-family: 'Orbitron', sans-serif; }
 
-  button { background: linear-gradient(#448AFF, $meinnovation-blue); border-radius: 10px; padding: 10px 0; cursor: pointer; color: white; text-align: center; width: 50%; border: none; box-shadow: 4px 4px 8px #3E4551; }
+  button { background: linear-gradient(#448AFF, $meinnovation-blue); border-radius: 10px; padding: 10px 0; cursor: pointer; color: white; text-align: center; width: 50%; border: none; box-shadow: 4px 4px 8px #ccc; }
 
   .ui-button { color: #e0e0e0; }
 
@@ -496,7 +490,7 @@ footer { font-family: 'Arial', sans-serif; position: fixed; color: #9e9e9e; bott
 
   .subdata-link { margin-top: 40px; font-family: 'Orbitron', sans-serif; }
 
-  button { background: linear-gradient(#448AFF, $meinnovation-blue); border-radius: 10px; padding: 10px 0; cursor: pointer; color: white; text-align: center; width: 50%; border: none; box-shadow: 4px 4px 8px #3E4551; }
+  button { background: linear-gradient(#448AFF, $meinnovation-blue); border-radius: 10px; padding: 10px 0; cursor: pointer; color: white; text-align: center; width: 50%; border: none; box-shadow: 4px 4px 8px #ccc; }
 
   .ui-button { color: #e0e0e0; }
 
